correct user name added

--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                                             <img src="./assets/users/2nd/Rectangle3.png" alt="user">
                                         </div>
                                         <div class="col-7 my-auto user-name col-lg-10 d-lg-flex">
-                                            <img src="./assets/users/Group 7.svg" alt="" class="d-lg-none">
+                                            <img src="./assets/users/2nd/Group7.1.svg" alt="" class="d-lg-none">
                                             <span class="d-none d-lg-inline name">Sarah West</span>
                                             <div class="d-none d-lg-inline ms-auto me-lg-4">
                                                 <img src="./assets/users/visibility_24px.svg" alt="">
@@ -586,7 +586,7 @@
                                             <img src="./assets/users/3rd/Rectangle3.png" alt="user">
                                         </div>
                                         <div class="col-7 my-auto user-name col-lg-10 d-lg-flex">
-                                            <img src="./assets/users/Group 7.svg" alt="" class="d-lg-none">
+                                            <img src="./assets/users/3rd/Group7.2.svg" alt="" class="d-lg-none">
                                             <span class="d-none d-lg-inline name">Ronal Jones</span>
                                             <div class="d-none d-lg-inline ms-auto me-lg-4">
                                                 <img src="./assets/users/visibility_24px.svg" alt="">
@@ -641,7 +641,7 @@
                                             <img src="./assets/users/4th/Rectangle3.png" alt="user">
                                         </div>
                                         <div class="col-7 my-auto user-name col-lg-10 d-lg-flex">
-                                            <img src="./assets/users/Group 7.svg" alt="" class="d-lg-none">
+                                            <img src="./assets/users/4th/Group7.3.svg" alt="" class="d-lg-none">
                                             <span class="d-none d-lg-inline name">Joseph Gray</span>
                                             <div class="d-none d-lg-inline ms-auto me-lg-4">
                                                 <img src="./assets/users/visibility_24px.svg" alt="">
